--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
   <input type="tel" name="phonenumber" />
   <button> Submit </button>
 </form>
+
 <script>
-  function saveToLocalStorage(event){
-    event.preventDefault();
-    const name = event.target.username.value;
-    const email = event.target.emailId.value;
-    const phonenumber = event.target.phonenumber.value;
-    localStorage.setItem ('name',name);
-    localStorage.setItem ('email',email);
-    localStorage.setItem ('phonenumber',phonenumber);
+   function saveToLocalStorage(event){
+     event.preventDefault();
+     const name = event.target.username.value;
+     const email = event.target.emailId.value;
+     const phonenumber = event.target.phonenumber.value;
+     localStorage.setItem ('name',name);
+     localStorage.setItem ('email',email);
+     localStorage.setItem ('phonenumber',phonenumber);
+     const Obj = {
+     name,
+     email,
+     phonenumber
+   }
+  localStorage.setItem('userDetails',JSON.stringify(Obj))
   }
   </script>
 </body>
