--- a/index.html
+++ b/index.html
@@ -1,66 +1,99 @@
 <html>
-  <body>
-    <form onsubmit="saveToLocalStorage(event)">
-      <label> Name</label>
-      <input type="text" name="username" required/>
-      <label> EmailId</label>
-      <input type="email" name="emailId" required/>
-      <label> Phone Number</label>
-      <input type="tel" name="phonenumber" />
-      <button> Submit </button>
-    </form>
-<ul id='listOfUsers'></ul>
-<script>
-  function saveToLocalStorage(event){
-     event.preventDefault();
-     const name = event.target.username.value;
-     const email = event.target.emailId.value;
-     const phonenumber = event.target.phonenumber.value;
-     //localStorage.setItem ('name',name);
-     //localStorage.setItem ('email',email);
-     //localStorage.setItem ('phonenumber',phonenumber);
-     const Obj = {
-     name,
-     email,
-     phonenumber
-   }
-  localStorage.setItem(Obj.email,JSON.stringify(Obj))
-   showNewUserOnScreen(Obj)
-   }
-    window.addEventListener("DOMContentLoaded", () => {
-      const localStorageObj = localStorage;
-      const localstoragekeys = Object.keys(localStorageObj)
+    <body>
+        <form  onsubmit="saveToLocalStorage(event)">
+            <label> Name</label>
+            <input id='username' type="text" name="username"  required/>
+            <label> EmailId</label>
+            <input id='email' type="email" name="emailId"  required/>
+            <label> Phone Number</label>
+            <input id='phonenumber' type="tel" name="phonenumber" />
+            <button> Submit </button>
+        </form>
+        <ul id='listOfUsers'></ul>
+        <script>
+            function saveToLocalStorage(event) {
+                event.preventDefault();
+                const name = event.target.username.value;
+                const email = event.target.emailId.value;
+                const phonenumber = event.target.phonenumber.value;
+                // localStorage.setItem('name', name);
+                // localStorage.setItem('email', email);
+                // localStorage.setItem('phonenumber', phonenumber)
+                const obj = {
+                    name,
+                    email,
+                    phonenumber
+                }
+                localStorage.setItem(obj.email, JSON.stringify(obj))
+                showNewUserOnScreen(obj)
+            }
 
-      for (var i=0; i< localstoragekeys.length; i++){
-        const key = localstoragekeys[i]
-        const userDetailsString = localStorageObj[key];
-        const userDetailsObj = JSON.parse(userDetailsString)
-        showNewUserOnScreen(userDetailsObj)
-      }
-   })
+            window.addEventListener("DOMContentLoaded", () => {
+                const localStorageObj = localStorage;
+                const localstoragekeys  = Object.keys(localStorageObj)
 
-   function showNewUserOnScreen(user) {
-     //console.log(localStorage.getItem(user.emailId))
-     if(localStorage.getItem(user.email) !== null){
-       removeUserFromScreen(user.email)
-     }
-     const parentNode = document.getElementById('listOfUsers');
-     const childHTML = `<li> ${user.name} - ${user.email} </li>`
-     parentNode.innerHTML = parentNode.innerHTML + childHTML;  
-   }
+                for(var i =0; i< localstoragekeys.length; i++){
+                    const key = localstoragekeys[i]
+                    const userDetailsString = localStorageObj[key];
+                    const userDetailsObj = JSON.parse(userDetailsString);
+                    showNewUserOnScreen(userDetailsObj)
+                }
+            })
 
-   function deleteUser(emailId){
-     console.log(emailId)
-     localStorage.removeItem(emailId);
-     removeUserFromScreen(emailId);
-   }
-   function removeUserFromScreen(emailId){
-    const parentNode = document.getElementById('listOfUser')
-       const childNodeToBeDeleted = document.getElementById('listOfUser')
-       if(childNodeToBeDeleted) {
-         parentNode.removeChild(childNodeToBeDeleted)
-       }
-  }
-  </script>
-</body>
+            function showNewUserOnScreen(user){
+                document.getElementById('email').value = '';
+                document.getElementById('username').value = '';
+                document.getElementById('phonenumber').value ='';
+                // console.log(localStorage.getItem(user.emailId))
+                if(localStorage.getItem(user.email) !== null){
+                    removeUserFromScreen(user.email)
+                }
+
+                const parentNode = document.getElementById('listOfUsers');
+                const childHTML = `<li id=${user.email}> ${user.name} - ${user.email}
+                                        <button onclick=deleteUser('${user.email}')> Delete User </button>
+                                        <button onclick=editUserDetails('${user.email}','${user.name}','${user.phonenumber}')>Edit User </button>
+                                     </li>`
+
+                parentNode.innerHTML = parentNode.innerHTML + childHTML;
+            }
+
+            //Edit User
+
+            function editUserDetails(emailId, name, phonenumber){
+
+                document.getElementById('email').value = emailId;
+                document.getElementById('username').value = name;
+                document.getElementById('phonenumber').value =phonenumber;
+
+                deleteUser(emailId)
+             }
+
+            // deleteUser('abc@gmail.com')
+
+            function deleteUser(emailId){
+                console.log(emailId)
+                localStorage.removeItem(emailId);
+                removeUserFromScreen(emailId);
+
+            }
+
+            function removeUserFromScreen(emailId){
+                const parentNode = document.getElementById('listOfUsers');
+                const childNodeToBeDeleted = document.getElementById(emailId);
+                if(childNodeToBeDeleted) {
+                    parentNode.removeChild(childNodeToBeDeleted)
+                }
+            }
+
+
+
+
+
+
+
+        </script>
+
+
+    </body>
 </html>
