--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     setTimeout(() => {
         let output = '';
        posts.forEach((post, index) => {
-    output += `<li>${post.title}</li>`
+    output += `<li>${post.title}: ${post.body}</li>`
     });
     document.body.innerHTML = output
-}, 1000)
+}, 1000);
 }
 
 getpost();
@@ -43,24 +43,36 @@ function createPost(post) {
    });
 }
 
-//  createPost({title:'Post Three', body: 'This is post three'})
-//  .then(getpost)
-//  .catch(err => console.log(err));
+ createPost({title:'Post Three', body: 'This is post three'})
+ .then(getpost)
+ .catch(err => console.log(err));
 
- const promise1 = Promise.resolve('Hello World');
- const promise2 = 10;
- const promise3 = new Promise((resolve,reject) => 
-  setTimeout(resolve, 2000, 'Goodbye')
- );
- const promise4 = fetch
- ('https://www.json.org/json-en.html').then(res => res.json()
- );
+ function deletePost(){
+     return new Promise((resolve,reject) => {
+            if (posts.length>0){
+                setTimeout(() => {
+                    resolve;
+                }, 1000);
+            }
+            else {
+                reject('Error: Array is empty now');
+            }
+     });
+ }
+//  const promise1 = Promise.resolve('Hello World');
+//  const promise2 = 10;
+//  const promise3 = new Promise((resolve,reject) => 
+//   setTimeout(resolve, 2000, 'Goodbye')
+//  );
+//  const promise4 = fetch
+//  ('https://www.json.org/json-en.html').then(res => res.json()
+//  );
 
- promise.all([promise1, promise2, promise3, promise4])
- .then(values =>
- console.log(values)
+//  promise.all([promise1, promise2, promise3, promise4])
+//  .then(values =>
+//  console.log(values)
 
- );
+//  );
     
     </script>
 </body>
