--- a/index.html
+++ b/index.html
@@ -10,70 +10,152 @@
 </head>
 <body>
     <script>
- const posts = [
- { title: 'Post One', body: 'This is post one' ,createdAt: new Date().getTime()},
-  { title: 'Post Two', body: 'This is post Two', createdAt: new Date().getTime()}
-];
+// console.log('person1: shows ticket');
+// console.log('person2: shows ticket');
+// const promiseWifeBringTicks = new Promise((resolve,reject) => {
+//  setTimeout(() => {
+//   resolve('ticket');
+//  },3000)
+// });  
 
-  function getpost(){
-    setTimeout(() => {
-        let output = '';
-       posts.forEach((post, index) => {
-    output += `<li>${post.title}: ${post.body}</li>`
-    });
-    document.body.innerHTML = output
-}, 1000);
-}
+// // promiseWifeBringTicks.then((t) => {
+// // console.log(`person3: shows ${t}`);
+// // });
 
-getpost();
+// const getPopcorn = promiseWifeBringTicks.then((t) => {
+//     console.log('wife: i have the tics');
+//     console.log('husband: we should go in');
+//     console.log('wife: no i am hungry');
+//     return new Promise((resolve,reject) => resolve(`${t} popcorn`));
+// });
+
+// const getButter = getPopcorn.then((t) => {
+//     console.log('husband: i got some popcorn');
+//     console.log('husband: we should go in');
+//     console.log('wife: I need butter on my popcorn');
+//     return new Promise((resolve,reject) => resolve(`${t} butter`));
+// });
+
+// const getcolddrink = getButter.then((t) => {
+//     console.log('husband: i got some butter');
+//     console.log('husband: where are our seat');
+//     console.log('wife: I need colddrink also');
+//     return new Promise((resolve,reject) => resolve(`${t} colddrink`));
+// });
 
 
-function createPost(post) {
-   return new Promise((resolve, reject) => {
-       setTimeout(() => {
-           posts.push(post);
-           const error = false;
+// getcolddrink.then((t) => console.log(t));
 
-           if (!error){
-               resolve();
-           }else{
-               reject('Error: Something went wrong');
-           }
-       }, 2000);
-   });
-}
+// console.log('person4: shows ticket');
+// console.log('person5: shows ticket');    
 
- createPost({title:'Post Three', body: 'This is post three'})
- .then(getpost)
- .catch(err => console.log(err));
+//////   Async function
 
- function deletePost(){
-     return new Promise((resolve,reject) => {
-            if (posts.length>0){
-                setTimeout(() => {
-                    resolve;
-                }, 1000);
-            }
-            else {
-                reject('Error: Array is empty now');
-            }
-     });
- }
-//  const promise1 = Promise.resolve('Hello World');
-//  const promise2 = 10;
-//  const promise3 = new Promise((resolve,reject) => 
-//   setTimeout(resolve, 2000, 'Goodbye')
-//  );
-//  const promise4 = fetch
-//  ('https://www.json.org/json-en.html').then(res => res.json()
-//  );
+// console.log('person1: shows ticket');
+// console.log('person2: shows ticket');
+// const preMovie = async () => {
 
-//  promise.all([promise1, promise2, promise3, promise4])
-//  .then(values =>
-//  console.log(values)
+// const promiseWifeBringTicks = new Promise((resolve,reject) => {
+//   setTimeout(() => {
+//    resolve('ticket');
+//   },3000)
+//   });  
 
-//  );
+//   const getPopcorn = new Promise((resolve,reject) => resolve(`popcorn`));    
+//   const addButter = new Promise((resolve,reject) => resolve(`butter`));
+//   const addcolddrink = new Promise((resolve,reject) => resolve(`colddrink`));  
+  
+
+//   let ticket = await promiseWifeBringTicks;
+
+//     console.log(`wife: i have the ${ticket}`);
+//     console.log('husband: we should go in');
+//     console.log('wife: no i am hungry');
+  
+//   let popcorn = await getPopcorn;
+
+//     console.log(`husband: i got some ${popcorn}`);
+//     console.log('husband: we should go in');
+//     console.log('wife: I need butter on my popcorn');
     
+//   let butter = await addButter;
+    
+//     console.log(`husband: i got some ${butter}`);
+//     console.log('husband: anything else darling?');
+//     console.log('wife: lets go we are getting late');
+//     console.log('husband: thank you for the remainder *grins*');
+ 
+//   let colddrink = await addcolddrink;
+
+//     console.log(`husband: i got some ${colddrink}`);
+//     console.log('husband: where are our seat');
+//     console.log('wife: I need colddrink also');
+
+// return ticket;
+// return ticket;
+// }
+// preMovie().then((m) => console.log(m));
+
+
+// console.log('person4: shows ticket');
+// console.log('person5: shows ticket');
+
+//////  promise_all
+
+// console.log('person1: shows ticket');
+// console.log('person2: shows ticket');
+// const preMovie = async () => {
+
+// const promiseWifeBringTicks = new Promise((resolve,reject) => {
+//   setTimeout(() => {
+//    resolve('ticket');
+//   },3000)
+//   });  
+
+//   const getPopcorn = new Promise((resolve,reject) => resolve(`popcorn`));    
+//   const getcandy = new Promise((resolve,reject) => resolve(`candy`));
+//   const getcoke = new Promise((resolve,reject) => resolve(`coke`));  
+  
+//   let ticket = await promiseWifeBringTicks;
+
+//   let [popcorn, candy, coke] = await Promise.all([getPopcorn,getcandy,getcoke]);
+//   console.log(`${popcorn}, ${candy}, ${coke}`);
+//    return ticket;
+
+// }
+// preMovie().then((m) => console.log(`person3: shows ${m}`));
+
+
+// console.log('person4: shows ticket');
+// console.log('person5: shows ticket');
+
+////// error correction
+
+console.log('person1: shows ticket');
+console.log('person2: shows ticket');
+const preMovie = async () => {
+
+const promiseWifeBringTicks = new Promise((resolve,reject) => {
+  setTimeout(() => {
+   reject('ticket');
+  },3000)
+  });  
+
+   let ticket 
+   try {
+       ticket = await promiseWifeBringTicks;
+   } catch(e){
+       ticket = 'sad face';
+   }
+ 
+   return ticket;
+
+}
+preMovie().then((m) => console.log(`person3: shows ${m}`));
+
+
+console.log('person4: shows ticket');
+console.log('person5: shows ticket');
     </script>
 </body>
 </html>
