--- a/index.html
+++ b/index.html
@@ -1,161 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-   
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,
-    initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Async JS</title>
-</head>
-<body>
-    <script>
-// console.log('person1: shows ticket');
-// console.log('person2: shows ticket');
-// const promiseWifeBringTicks = new Promise((resolve,reject) => {
-//  setTimeout(() => {
-//   resolve('ticket');
-//  },3000)
-// });  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <title>Axios Crash Course</title>
+  </head>
+  <body>
+    <div class="container my-5">
+      <div class="text-center">
+        <h1 class="display-4 text-center mb-3">Axios Crash Course</h1>
+        <button class="btn btn-primary my-3" id="get">GET</button>
+        <button class="btn btn-info" id="post">POST</button>
+        <button class="btn btn-warning" id="update">PUT/PATCH</button>
+        <button class="btn btn-danger" id="delete">DELETE</button>
+        <button class="btn btn-secondary" id="sim">Sim Requests</button>
+        <button class="btn btn-secondary" id="headers">
+          Custom Headers
+        </button>
+        <button class="btn btn-secondary" id="transform">
+          Transform
+        </button>
+        <button class="btn btn-secondary" id="error">
+          Error Handling
+        </button>
+        <button class="btn btn-secondary" id="cancel">
+          Cancel
+        </button>
+      </div>
+      <hr />
+      <div id="res"></div>
+    </div>
 
-// // promiseWifeBringTicks.then((t) => {
-// // console.log(`person3: shows ${t}`);
-// // });
-
-// const getPopcorn = promiseWifeBringTicks.then((t) => {
-//     console.log('wife: i have the tics');
-//     console.log('husband: we should go in');
-//     console.log('wife: no i am hungry');
-//     return new Promise((resolve,reject) => resolve(`${t} popcorn`));
-// });
-
-// const getButter = getPopcorn.then((t) => {
-//     console.log('husband: i got some popcorn');
-//     console.log('husband: we should go in');
-//     console.log('wife: I need butter on my popcorn');
-//     return new Promise((resolve,reject) => resolve(`${t} butter`));
-// });
-
-// const getcolddrink = getButter.then((t) => {
-//     console.log('husband: i got some butter');
-//     console.log('husband: where are our seat');
-//     console.log('wife: I need colddrink also');
-//     return new Promise((resolve,reject) => resolve(`${t} colddrink`));
-// });
-
-
-// getcolddrink.then((t) => console.log(t));
-
-// console.log('person4: shows ticket');
-// console.log('person5: shows ticket');    
-
-//////   Async function
-
-// console.log('person1: shows ticket');
-// console.log('person2: shows ticket');
-// const preMovie = async () => {
-
-// const promiseWifeBringTicks = new Promise((resolve,reject) => {
-//   setTimeout(() => {
-//    resolve('ticket');
-//   },3000)
-//   });  
-
-//   const getPopcorn = new Promise((resolve,reject) => resolve(`popcorn`));    
-//   const addButter = new Promise((resolve,reject) => resolve(`butter`));
-//   const addcolddrink = new Promise((resolve,reject) => resolve(`colddrink`));  
-  
-
-//   let ticket = await promiseWifeBringTicks;
-
-//     console.log(`wife: i have the ${ticket}`);
-//     console.log('husband: we should go in');
-//     console.log('wife: no i am hungry');
-  
-//   let popcorn = await getPopcorn;
-
-//     console.log(`husband: i got some ${popcorn}`);
-//     console.log('husband: we should go in');
-//     console.log('wife: I need butter on my popcorn');
-    
-//   let butter = await addButter;
-    
-//     console.log(`husband: i got some ${butter}`);
-//     console.log('husband: anything else darling?');
-//     console.log('wife: lets go we are getting late');
-//     console.log('husband: thank you for the remainder *grins*');
- 
-//   let colddrink = await addcolddrink;
-
-//     console.log(`husband: i got some ${colddrink}`);
-//     console.log('husband: where are our seat');
-//     console.log('wife: I need colddrink also');
-
-// return ticket;
-// return ticket;
-// }
-// preMovie().then((m) => console.log(m));
-
-
-// console.log('person4: shows ticket');
-// console.log('person5: shows ticket');
-
-//////  promise_all
-
-// console.log('person1: shows ticket');
-// console.log('person2: shows ticket');
-// const preMovie = async () => {
-
-// const promiseWifeBringTicks = new Promise((resolve,reject) => {
-//   setTimeout(() => {
-//    resolve('ticket');
-//   },3000)
-//   });  
-
-//   const getPopcorn = new Promise((resolve,reject) => resolve(`popcorn`));    
-//   const getcandy = new Promise((resolve,reject) => resolve(`candy`));
-//   const getcoke = new Promise((resolve,reject) => resolve(`coke`));  
-  
-//   let ticket = await promiseWifeBringTicks;
-
-//   let [popcorn, candy, coke] = await Promise.all([getPopcorn,getcandy,getcoke]);
-//   console.log(`${popcorn}, ${candy}, ${coke}`);
-//    return ticket;
-
-// }
-// preMovie().then((m) => console.log(`person3: shows ${m}`));
-
-
-// console.log('person4: shows ticket');
-// console.log('person5: shows ticket');
-
-////// error correction
-
-console.log('person1: shows ticket');
-console.log('person2: shows ticket');
-const preMovie = async () => {
-
-const promiseWifeBringTicks = new Promise((resolve,reject) => {
-  setTimeout(() => {
-   reject('ticket');
-  },3000)
-  });  
-
-   let ticket 
-   try {
-       ticket = await promiseWifeBringTicks;
-   } catch(e){
-       ticket = 'sad face';
-   }
- 
-   return ticket;
-
-}
-preMovie().then((m) => console.log(`person3: shows ${m}`));
-
-
-console.log('person4: shows ticket');
-console.log('person5: shows ticket');
-    </script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+    <script src="index.js"></script>
+  </body>
 </html>
