--- a/index.html
+++ b/index.html
@@ -1,110 +1,121 @@
 <html>
- 
-     <body>
-        <form  onsubmit="saveToLocalStorage(event)">
-            <label> Name</label>
-            <input id='username' type="text" name="username"  required/>
-            <label> EmailId</label>
-            <input id='email' type="email" name="emailId"  required/>
-            <label> Phone Number</label>
-            <input id='phonenumber' type="tel" name="phonenumber" />
-            <button> Submit </button>
-        </form>
-        <ul id='listOfUsers'></ul>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
-        <script>
-            function saveToLocalStorage(event) {
-                event.preventDefault();
-                const name = event.target.username.value;
-                const email = event.target.emailId.value;
-                const phonenumber = event.target.phonenumber.value;
-                // localStorage.setItem('name', name);
-                // localStorage.setItem('email', email);
-                // localStorage.setItem('phonenumber', phonenumber)
-                const obj = {
-                    name,
-                    email,
-                    phonenumber
-                }
+<body>
+    <form  onsubmit="saveToLocalStorage(event)">
+        <label> Name</label>
+        <input id='username' type="text" name="username"  required/>
+        <label> EmailId</label>
+        <input id='email' type="email" name="emailId"  required/>
+        <label> Phone Number</label>
+        <input id='phonenumber' type="tel" name="phonenumber" />
+        <button> Submit </button>
+    </form>
+    <ul id='listOfUsers'></ul>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
+    <script>
+        function saveToLocalStorage(event) {
+            event.preventDefault();
+            const name = event.target.username.value;
+            const email = event.target.emailId.value;
+            const phonenumber = event.target.phonenumber.value;
+            // localStorage.setItem('name', name);
+            // localStorage.setItem('email', email);
+            // localStorage.setItem('phonenumber', phonenumber)
+            const obj = {
+                name,
+                email,
+                phonenumber
+            }
+            //localStorage.setItem(obj.email, JSON.stringify(obj))
+            //showNewUserOnScreen(obj)
 
-               axios.post("https://crudcrud.com/api/796509524edb48df83bd77fc578b27d8/applicationData",obj)
+            axios.post("https://crudcrud.com/api/3084df3d5645423d92a9624179e7b303/applicationData",obj)
                 .then((respone) =>{
                     showNewUserOnScreen(respone.data)
-                   console.log(respone)
+                  // console.log(respone)
                 })
                 .catch((err)=> {
+                    document.body.innerHTML = document.body.innerHTML + "<h4> something went wrong </h4>"
                     console.log(err)
                 })
                 // localStorage.setItem(obj.email, JSON.stringify(obj))
-                //showNewUserOnScreen(obj)
-            }
+                showNewUserOnScreen(obj)
+        }
 
-            window.addEventListener("DOMContentLoaded", () => {
-                const localStorageObj = localStorage;
-                const localstoragekeys  = Object.keys(localStorageObj)
+        window.addEventListener("DOMContentLoaded", () => {
+        axios.get("https://crudcrud.com/api/3084df3d5645423d92a9624179e7b303/applicationData")
+               .then((response) => {
+             // console.log(response);
 
-                for(var i =0; i< localstoragekeys.length; i++){
-                    const key = localstoragekeys[i]
-                    const userDetailsString = localStorageObj[key];
-                    const userDetailsObj = JSON.parse(userDetailsString);
-                    showNewUserOnScreen(userDetailsObj)
-                }
-            })
+              for (var i = 0; i < response.data.length; i++) {
+              showNewUsersOnScreen(response.data[i]);
+              }
+             })
+             .catch((err) => {
+                 console.log(err)
+             })
+        })
 
-            function showNewUserOnScreen(user){
-                document.getElementById('email').value = '';
-                document.getElementById('username').value = '';
-                document.getElementById('phonenumber').value ='';
-                // console.log(localStorage.getItem(user.emailId))
-                if(localStorage.getItem(user.email) !== null){
-                    removeUserFromScreen(user.email)
-                }
+         function showNewUserOnScreen(user){
 
-                const parentNode = document.getElementById('listOfUsers');
-                const childHTML = `<li id=${user.email}> ${user.name} - ${user.email}
-                                        <button onclick=deleteUser('${user.email}')> Delete User </button>
-                                        <button onclick=editUserDetails('${user.email}','${user.name}','${user.phonenumber}')>Edit User </button>
-                                     </li>`
+user = {
+    _id: '',
+    name: '',
+    email: '',
+}
+document.getElementById('email').value = '';
+document.getElementById('username').value = '';
+document.getElementById('phonenumber').value ='';
+// console.log(localStorage.getItem(user.emailId))
+if(localStorage.getItem(user.email) !== null){
+    removeUserFromScreen(user.email)
+}
 
-                parentNode.innerHTML = parentNode.innerHTML + childHTML;
-            }
+const parentNode = document.getElementById('listOfUsers');
+const childHTML = `<li id=${user._id}> ${user.name} - ${user.email}
+                        <button onclick=deleteUser('${user._id}')> Delete User </button>
+                        <button onclick=editUserDetails('${user._id}','${user.name}','${user.phonenumber}')>Edit User </button>
+                     </li>`
 
-            //Edit User
+parentNode.innerHTML = parentNode.innerHTML + childHTML;
+}
 
-            function editUserDetails(emailId, name, phonenumber){
+//Edit User
 
-                document.getElementById('email').value = emailId;
-                document.getElementById('username').value = name;
-                document.getElementById('phonenumber').value =phonenumber;
+function editUserDetails(emailId, name, phonenumber){
 
-                deleteUser(emailId)
-             }
+document.getElementById('email').value = emailId;
+document.getElementById('username').value = name;
+document.getElementById('phonenumber').value =phonenumber;
 
-            // deleteUser('abc@gmail.com')
+deleteUser(emailId)
+}
 
-            function deleteUser(emailId){
-                console.log(emailId)
-                localStorage.removeItem(emailId);
-                removeUserFromScreen(emailId);
+// deleteUser('abc@gmail.com')
 
-            }
+function deleteUser(userId){
+axios.delete(`https://crudcrud.com/api/3084df3d5645423d92a9624179e7b303/applicationData/${userId}`)
+ .then(() => {
+    removeUserFromScreen(userId)
+ })
+ .catch((err) => {
+     console.log(err)
+ })
 
-            function removeUserFromScreen(emailId){
-                const parentNode = document.getElementById('listOfUsers');
-                const childNodeToBeDeleted = document.getElementById(emailId);
-                if(childNodeToBeDeleted) {
-                    parentNode.removeChild(childNodeToBeDeleted)
-                }
-            }
+// console.log(emailId)
+// localStorage.removeItem(emailId);
+// removeUserFromScreen(emailId);
+
+}
+
+function removeUserFromScreen(userId){
+const parentNode = document.getElementById('listOfUsers');
+const childNodeToBeDeleted = document.getElementById(userId);
+if(childNodeToBeDeleted) {
+    parentNode.removeChild(childNodeToBeDeleted)
+}
+}
+</script>
 
 
-
-
-
-
-
-        </script>
-
-
-    </body> -->
-</html> 
+</body>
+</html>
