--- a/index.html
+++ b/index.html
@@ -1,14 +1,120 @@
-</div><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
 <body>
- 
+  <form  onsubmit="saveToLocalStorage(event)">
+      <label> Name</label>
+      <input id='username' type="text" name="username"  required/>
+      <label> EmailId</label>
+      <input id='email' type="email" name="emailId"  required/>
+      <label> Phone Number</label>
+      <input id='phonenumber' type="tel" name="phonenumber" />
+      <button> Submit </button>
+  </form>
+  <ul id='listOfUsers'></ul>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
   <script>
- const http = require('http');
- const server = http.createServer((req,res) => {
-     console.log(req);
- });
- server.listen(4000);
-</script>
-</body>
-</html>
+      function saveToLocalStorage(event) {
+          event.preventDefault();
+          const name = event.target.username.value;
+          const email = event.target.emailId.value;
+          const phonenumber = event.target.phonenumber.value;
+          // localStorage.setItem('name', name);
+          // localStorage.setItem('email', email);
+          // localStorage.setItem('phonenumber', phonenumber)
+          const obj = {
+              name,
+              email,
+              phonenumber
+          }
+          //localStorage.setItem(obj.email, JSON.stringify(obj))
+          //showNewUserOnScreen(obj)
+
+          axios.post("https://crudcrud.com/api/7703f1ebffc9416e840e01732364cf53/applicationData",obj)
+              .then((respone) =>{
+                  showNewUserOnScreen(respone.data)
+                 console.log(respone)
+                // console.log(respone)
+              })
+              .catch((err)=> {
+                  document.body.innerHTML = document.body.innerHTML + "<h4> something went wrong </h4>"
+                  console.log(err)
+              })
+              // localStorage.setItem(obj.email, JSON.stringify(obj))
+              //showNewUserOnScreen(obj)
+          }
+
+          window.addEventListener("DOMContentLoaded", () => {
+              const localStorageObj = localStorage;
+              const localstoragekeys  = Object.keys(localStorageObj)
+
+              for(var i =0; i< localstoragekeys.length; i++){
+                  const key = localstoragekeys[i]
+                  const userDetailsString = localStorageObj[key];
+                  const userDetailsObj = JSON.parse(userDetailsString);
+                  showNewUserOnScreen(userDetailsObj)
+              }
+          })
+
+          function showNewUserOnScreen(user){
+              document.getElementById('email').value = '';
+              document.getElementById('username').value = '';
+              document.getElementById('phonenumber').value ='';
+              // console.log(localStorage.getItem(user.emailId))
+              if(localStorage.getItem(user.email) !== null){
+                  removeUserFromScreen(user.email)
+              }
+
+              const parentNode = document.getElementById('listOfUsers');
+              const childHTML = `<li id=${user.email}> ${user.name} - ${user.email}
+                                      <button onclick=deleteUser('${user.email}')> Delete User </button>
+                                      <button onclick=editUserDetails('${user.email}','${user.name}','${user.phonenumber}')>Edit User </button>
+                                   </li>`
+
+              parentNode.innerHTML = parentNode.innerHTML + childHTML;
+          }
+
+          //Edit User
+
+          function editUserDetails(emailId, name, phonenumber){
+
+              document.getElementById('email').value = emailId;
+              document.getElementById('username').value = name;
+              document.getElementById('phonenumber').value =phonenumber;
+
+              deleteUser(emailId)
+           }
+
+          // deleteUser('abc@gmail.com')
+
+          function deleteUser(emailId){
+              console.log(emailId)
+              localStorage.removeItem(emailId);
+              removeUserFromScreen(emailId);
+
+          }
+
+          function removeUserFromScreen(emailId){
+              const parentNode = document.getElementById('listOfUsers');
+              const childNodeToBeDeleted = document.getElementById(emailId);
+              if(childNodeToBeDeleted) {
+                  parentNode.removeChild(childNodeToBeDeleted)
+              }
+          }
+
+
+
+
+
+
+
+      </script>
+
+
+  </body> -->
+</html>  
