Toast message notifiaton

--- a/indexs.html
+++ b/indexs.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hamburger button</title>
+    <title>Toast notifiation</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button id="btn">☰</button>
-   <nav id="nav">
-       <ul>
-        <li><a href="#">Google</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">Twitter</a></li>
-       </ul>
-   </nav>
+    <div id="container"></div>
+    <button id="btn">Click me pretty please</button>
 </body>
 </html>
