--- a/indexs.html
+++ b/indexs.html
@@ -4,26 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Mode Toggle</title>
+    <title>Carousel</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
 </head>
 <body>
- 
-  <div class="toggle-container">
-      <input type="checkbox" id="toggle" name="toggle"><label for="toggle"></label>
-  </div>
-        <h1>The Raven</h1>
-        <p>Once upon a midnight dreary,
-            While I pondered, weak and weary,
-            Over many a quaint and curious
-            Volume of forgotten lore—
-            While I nodded, nearly napping,
-            Suddenly there came a tapping,
-            As of some one gently rapping,
-            Rapping at my chamber door.
-            "'Tis some visitor," I muttered,
-            "Tapping at my chamber door
-            Only this, and nothing more."</p>
+   <div class="carousal">
+       <div class="image-container" id="imgs">
+           <img src="https://images.unsplash.com/photo-1644003847268-012db4b5eb8d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" alt="">
+           <img src="https://images.unsplash.com/photo-1643930542002-71d8b77bafa8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="">
+           <img src="https://images.unsplash.com/photo-1643948684785-9ec1693fe1db?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="">
+           <img src="https://images.unsplash.com/photo-1644004344649-346f960fceac?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyMzh8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="">
+       </div>
+   </div> 
 </body>
 </html>
