changing the cart layout

--- a/about.html
+++ b/about.html
@@ -30,9 +30,15 @@
         </div>
       </div>
   </header>
-       
-    </div>
-
+  <section>
+    <div class="qoutes">
+        <h4>“Goal is to turn data into information and information into insights.”</h4>     
+        <h4>“The sooner we drop the ‘e’ out of ‘e-commerce’ and just call it commerce, the better.”</h4>
+        <h4>“Customer service shouldn’t just be a department, it should be the entire company”</h4>
+        <h4>“When you say it, it’s marketing. When your customer says it, it’s social proof”</h4>    
+      </div>
+  
+    </section>
         
    
 </body>
