--- a/home.html
+++ b/home.html
@@ -30,7 +30,17 @@
         </div>
       </div>
   </header>
-      
+      <section>
+          <h2 class="store">STORE</h2>
+          <div class="tickets">
+              <h3>JUL 16    MUMBAI 
+              <button type="button" class="button">BUY TICKETS</button> </h3>
+              <h3>JUL 18    DELHI 
+              <button type="button" class="button">BUY TICKETS</button> </h3>
+              <h3>JUL 20    PUNE 
+              <button type="button" class="button">BUY TICKETS</button> </h3>
+          </div>
+      </section>
         
     </div>
 
